# idstring

./: .gitignore  MANIFEST.in  README.md  README.txt  idstring.py  pyproject.toml  sample_seedstore.py  sample_with_database.py  setup.py  testidstring.py
idstring/: __init__.py  idstring.py
test/: test_idstring.py
tests/: testidstring.py
